--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*--------------------------------------------------------------
-# Fonts Variables
+# 1.Fonts Variables
 --------------------------------------------------------------*/
 @font-face {
   font-family: "Metropolis-Regular";
@@ -43,7 +43,7 @@
 }
 
 /*--------------------------------------------------------------
-# General
+# 2.General
 --------------------------------------------------------------*/
 body {
   font-family: "Metropolis-Regular", sans-serif;
@@ -83,7 +83,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Header
+# 3.Header
 --------------------------------------------------------------*/
 #header {
   top: 0;
@@ -344,10 +344,10 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### İndex.HTML CSS KODLARI START ###############
+############### 5.İndex.HTML CSS KODLARI START ###############
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
-# Hero
+# 5.1 Hero
 --------------------------------------------------------------*/
 #hero {
   background-image: url(../img/hero-bg.png);
@@ -456,7 +456,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# client
+# 5.2 What We Do / Neler Yapıyoruz ?
 --------------------------------------------------------------*/
 #whatWeDo {
   padding-top: 250px;
@@ -758,7 +758,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# What Else We Do Side
+# 5.3 What Else We Do Side / Başka neler yapıyoruz ?
 --------------------------------------------------------------*/
 #WhatElseWeDoSide h3 {
   font-family: "Metropolis-Medium";
@@ -889,7 +889,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Blog Side
+# 5.4 Blog Side
 --------------------------------------------------------------*/
 #blog {
   background-color: #fafafa;
@@ -1108,7 +1108,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# BlogDetail
+# 5.5 BlogDetail
 --------------------------------------------------------------*/
 #blogDetail h3 {
   font-family: "Montserrat-Medium";
@@ -1324,7 +1324,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# faq
+# 5.6 faq
 --------------------------------------------------------------*/
 #faq {
   background-image: url(../img/faq-bg.png);
@@ -1420,7 +1420,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# BiziSecenler
+# 5.7 BiziSecenler
 --------------------------------------------------------------*/
 #biziSecenler {
   background-color: #fafafa;
@@ -1483,7 +1483,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# teklif Side 
+# 5.8 teklif Side 
 --------------------------------------------------------------*/
 #teklif {
   padding-top: 100px;
@@ -1615,10 +1615,10 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### blog.HTML CSS KODLARI START ###############
+############### 6.blog.HTML CSS KODLARI START ###############
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
-# BlogDetail
+# 6.1 BlogDetail
 --------------------------------------------------------------*/
 #blogBlogDetail {
   margin-top: 120px;
@@ -1830,7 +1830,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Blog Listesi
+# 6.2 Blog Listesi
 --------------------------------------------------------------*/
 #blogLists .blog-card .card-head {
   border-top-left-radius: 18px;
@@ -1982,7 +1982,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### blog-detay.html CSS KODLARI  START ###############
+############### 7. blog-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #blogContent {
   margin-top: 120px;
@@ -2208,7 +2208,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### referanslar.html CSS KODLARI  START ###############
+############### 8. referanslar.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references {
   margin-top: 120px;
@@ -2472,7 +2472,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### referans-detay.html CSS KODLARI  START ###############
+############### 9. referans-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references-detail {
   margin-top: 120px;
@@ -2854,7 +2854,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### iletisim.html CSS KODLARI  START ###############
+############### 10. iletisim.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #contact {
   margin-top: 120px;
@@ -3036,7 +3036,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### hakkimizda.html CSS KODLARI  START ###############
+############### 11. hakkimizda.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #aboutUs {
   margin-top: 120px;
@@ -3104,7 +3104,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### hizmetler.html CSS KODLARI  START ###############
+############### 12. hizmetler.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services {
   margin-top: 120px;
@@ -3280,7 +3280,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### hizmetler.html CSS KODLARI  START ###############
+############### 13. hizmetler-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services-detail {
   margin-top: 120px;
@@ -3489,7 +3489,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Footer Side
+# 4.Footer Side
 --------------------------------------------------------------*/
 #footer {
   background-color: #fafafa;
