--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@
 /*--------------------------------------------------------------
 # 2.General
 --------------------------------------------------------------*/
+html {
+  scroll-padding-top: 80px;
+}
+
 body {
   font-family: "Metropolis-Regular", sans-serif;
   color: #000000;
