--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1891,6 +1891,11 @@ section {
       font-family: "Metropolis-Regular";
       margin-bottom: 20px;
     }
+    .link{
+      color: #919191;
+      font-size: 16px;
+      border-bottom: solid #919191 1px;
+    }
 
     .prev-btn {
       position: absolute;
